--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
+  background-image: url(./assets/images/bg.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,12 +15,30 @@ code {
     monospace;
 }
 
-img {
-  height: 75px;
-  width: 75px;
-}
-
 th:first-child {
   width: 80px
+}
+
+.container {
+  background-color: lightslategray;
+  max-width: 700px;
+  opacity: 0.9;
+  margin: 3% auto;
+  padding: 10px;
+}
+
+img.logo {
+  display: block;
+  margin: auto;
+  width: 200px;
+}
+
+img.split {
+  height: 50px;
+  width: 50px;
+}
+
+.split-label {
+  font-weight: bolder;
 }
 
