CSS updates for alerts.

--- a/src/index.css
+++ b/src/index.css
@@ -63,3 +63,9 @@ td.split-best {
   font-weight: bold;
 }
 
+.alert {
+  font-family: monospace !important;
+  font-weight: bold;
+  margin-bottom: unset;
+}
+
