--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,17 @@ td.split-best {
   margin-bottom: unset;
 }
 
+.promo {
+  position: fixed;
+  bottom: 0;
+  background-color: lightgray;
+  left: 0;
+  padding: 5px;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.promo a {
+  color: darkmagenta;
+}
+
